plane ride home checkin

--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
 </head>
 <body>
 <div class="app">
-    <h1>To do:</h1>
+    <h1>Todo:</h1>
     <div id="todo"></div>
     <input id="taskInput" />
     <button onclick="addTodo()">Add Task</button>
+    <i>Click to update todo status</i>
 </div>
+
 
 <script>
     var data = [
-        {task: "Write an todo app with pure javascript", status: ""},
-        {task: "Give Avery a high five"},
-        {task: "Fly to San Fransisco"},
-        {task: "Eat a Yummy Dinner"}
+        {task: "Write an todo app with pure javascript", status: "incomplete"},
+        {task: "Give Avery a high five", status: "incomplete"},
+        {task: "Fly to San Fransisco", status: "incomplete"},
+        {task: "Eat a Yummy Dinner",status: "incomplete"}
     ];
 
     (function(){printTodos();}());
@@ -27,6 +29,14 @@
         for(var i = 0; i < data.length; i++){
             var todoDiv = document.createElement('div');
             todoDiv.innerHTML = data[i].task;
+                todoDiv.addEventListener('click', function(){
+                    if(this.className == "completed") {
+                        this.className = "incomplete";
+                    } else {
+                        this.className = "completed";
+                    }
+                });
+            todoDiv.className = "incomplete";
             document.getElementById('todo').appendChild(todoDiv);
         }
     }
@@ -34,6 +44,15 @@
     function printNewTodo(todo){
         var todoDiv = document.createElement('div');
         todoDiv.innerHTML = todo;
+
+        todoDiv.addEventListener('click', function(){
+            if(todoDiv.className == "completed") {
+                todoDiv.className = "incomplete";
+            } else {
+                todoDiv.className = "completed";
+            }
+        });
+        todoDiv.className = "incomplete";
         document.getElementById('todo').appendChild(todoDiv);
     }
 
@@ -45,24 +64,12 @@
         document.getElementById('taskInput').value = "";
     }
 
-    function createTodoObject{
-
-    }
-
     function addTodo(){
         var newTask = document.getElementById('taskInput').value;
         var newTodo = {task: newTask};
         storeTodo(newTodo);
         cleanUp();
         printNewTodo(newTask);
-    }
-
-    function complete(element){
-        if(element.className == "completed") {
-            element.className = "";
-        } else {
-            element.className = "completed";
-        }
     }
 </script>
 </body>
